fixed circles from getting squished on lower res, refs #994

--- a/app/assets/client/css/grid.scss
+++ b/app/assets/client/css/grid.scss
@@ -522,8 +522,8 @@
       }
 
       .circle {
-        min-height: 40px;
-        min-width: 40px;
+        min-height: 50px;
+        min-width: 50px;
         float: left;
         background-color: #01B598;
         border-radius: 50%;
